postgresql and users

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.dylib
 *.html
 out
+schema/
+*.yaml
 
 # Test binary, built with `go test -c`
 *.test
@@ -18,6 +20,7 @@ out
 coverage.*
 *.coverprofile
 profile.cov
+test.http
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
